Commit to Master

--- a/restws-1/src/main/resources/employee.properties
+++ b/restws-1/src/main/resources/employee.properties
@@ -1,3 +1,3 @@
-id=12345	
-name=vijay
-address=1234 edna ct plano North Carolina
+employee.id=12345	
+employee.name=Thanya
+employee.address=1234 edna ct plano Texas
